[gd_scene load_steps=7 format=2]

[ext_resource path="res://snowmantheme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://images/ending1.png" type="Texture" id=3]
[ext_resource path="res://images/ConceptElf.png" type="Texture" id=4]
[ext_resource path="res://fonts/LibreBaskerville-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 5 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -1024.0
script = ExtResource( 2 )

[node name="Ending1" type="Sprite" parent="."]
position = Vector2( 481, 617 )
scale = Vector2( 1.20313, 1.20313 )
texture = ExtResource( 3 )

[node name="Play" type="Button" parent="."]
margin_left = 173.0
margin_top = 193.0
margin_right = 624.0
margin_bottom = 304.0
theme = ExtResource( 1 )
text = "Play"

[node name="Credits" type="Button" parent="."]
margin_left = 246.0
margin_top = 342.0
margin_right = 697.0
margin_bottom = 453.0
theme = ExtResource( 1 )
text = "Credits"

[node name="Quit" type="Button" parent="."]
margin_left = 317.0
margin_top = 493.0
margin_right = 768.0
margin_bottom = 604.0
theme = ExtResource( 1 )
text = "Quit"

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 863, 684 )
scale = Vector2( 0.142145, 0.142145 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = 35.0
margin_top = 75.0
margin_right = 875.0
margin_bottom = 193.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 1 )
text = "Present for mr snowman"

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
